--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,18 @@
 {
-    "version":2,
-    "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "/"
-        }
-    ]
-  }
+  "version": 2,
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    },
+    {
+      "src": "/uploads/items",
+      "dest": "/uploads/items"
+    },
+    {
+      "src": "/uploads/dummy",
+      "dest": "/uploads/dummy"
+    }
+  ]
+}
